<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AlbumFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/GuestMenuTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/guest_menu_title"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_see_album_catalog"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="236dp"
            android:layout_height="164dp"
            android:layout_marginStart="84dp"
            android:layout_marginTop="36dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/see_album_catalog"
            app:cornerRadius="20dp"
            app:iconPadding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/GuestMenuTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </layout>